--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-colorama
-langchain_anthropic
+pandas
 langchain_core
 langchain_openai
+langchain_anthropic
+python-dotenv
+scikit-optimize
+opencv-python
+scikit-image
+colorama
+scipy
+regex
+pydantic
 numpy
 opencv_python
-pandas
-pydantic
 pyqtgraph
-python-dotenv
 scikit_optimize
-scipy
 scikit_image
 watchdog
